Fix black header overlapping

--- a/server/sonar-web/src/main/less/layout.less
+++ b/server/sonar-web/src/main/less/layout.less
@@ -88,7 +88,6 @@ body, a {
 
 #nav {
   float: right;
-  padding: 0 0 0 20px;
   vertical-align: middle;
 }
 
